paperless/CiliumNetworkPolicy-gotenberg.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: gotenberg
  namespace: paperless
spec:
  egress:
    - {}
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: gotenberg
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: paperless
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
